fixed: 404 custom page, top nav, django messages on small devices

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,7 +16,8 @@ nav.navbar .navbar-brand {
 }
 .navbar-collapse{
     padding: 1rem;
-    z-index: 99
+    z-index: 99;
+    height: fit-content!important;
 }
 html, body, #main-content:not(.inline){
     min-height: 100vh;
@@ -28,8 +29,13 @@ html, body, #main-content:not(.inline){
     top: 0;
     z-index: 99999999;
 }
+@media (min-width: 768px) {
+    .alerts-container{
+        width: 50%;
+    }
+}
 .alerts-container{
-    width: 50%;
+    /* width: 50%; */
     margin: 1rem auto;
 }
 
@@ -59,9 +65,6 @@ footer.footer{
 }
 .bg-primary{background-color: var(--primary)!important;}
 
-#search-form{
-    width: 30%!important;
-}
 
 @media (max-width: 800px) {
     .footer__links a{
@@ -75,11 +78,14 @@ footer.footer{
     }
 }
 
-/* @media (min-width: 1100px){
-    #search-input{
-        width: 320px!important;
+@media (min-width: 1200px){
+    #search-form{
+        width: 30%!important;
     }
-} */
+    /* #search-input{
+        width: 320px!important;
+    } */
+}
 .no-underline{
     text-decoration: none!important;
 }
